[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
name = "fbpdfrs"
version = "0.1.0"

[dependencies]
cairo-rs = "0.3.0"
failure = "0.1.3"
framebuffer = "0.1.7"
log = "0.4.6"
nix = { version = "0.11.0", optional = true }
poppler = "0.2.3"
structopt = "0.2.13"
stderrlog = "0.4.1"
termion = "1.5.1"
